[package]
name = "nft-mp-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
mongodb = "2.6.0"
bson = "2.6.1"
serde = { version = "1.0.171", features = ["derive"] }