[package]
name = "nft-mp-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
mongodb = "2.6.0"
bson = "2.6.1"
serde = { version = "1.0.171", features = ["derive"] }
ethers = "2.0.8"
eyre = "0.6.8"
serde_json = "1.0.102"
futures = "0.3.28"
hex = "0.4.3"
dotenv = "0.15.0"
